--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,15 +2,14 @@ name: Deploy Quasar SPA to GitHub Pages
 
 on:
   push:
-    branches:
-      - cicd  # หรือชื่อ branch ที่คุณใช้งาน
+    branches: [ "master" ] # เปลี่ยนเป็น branch ที่คุณใช้
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     permissions:
-      contents: write
-
+      contents: write  # Allow pushing to gh-pages
+      
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -18,7 +17,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '20' # ใช้ Node.js เวอร์ชัน 18 หรือสูงกว่า
 
       - name: Install dependencies
         run: npm install
@@ -29,5 +28,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GH_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}  # 🔒 ใช้ GitHub Actions Secret
           publish_dir: dist/spa
